cmake_minimum_required(VERSION 3.0)

##### SUBDIRECTORIES #####

add_subdirectory(libfile)
add_subdirectory(libmonocleclient)
add_subdirectory(libmonocleprotocol)
add_subdirectory(libsocket)
add_subdirectory(librtsp)
add_subdirectory(libonvifclient)
add_subdirectory(libonvifserver)
add_subdirectory(libonviftypes)
add_subdirectory(libutility)
add_subdirectory(libwsdiscover)
